test/libsolidity/syntaxTests/nameAndTypeResolution/free_and_constant.sol
uint constant c = 7;
function c() returns (uint) {}
// ----
// DeclarationError 2333: (21-51): Identifier already declared.
